--- a/usuarios/templates/user_updete_count.html
+++ b/usuarios/templates/user_updete_count.html
@@ -1,4 +1,4 @@
-<a href="{% url 'users' %}">Volver a Lista De Usuarios</a>
+<a href="{% url 'users' user.id %}">Volver a Lista De Usuarios</a>
 
 <form method="post">
     {% csrf_token %}
