--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'user_login' %}">Registrarce</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'user_login' %}">Registrarse</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'user_update' user.id %}">Editar Perfil</a>
