--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'user_login' %}">Registrarse</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'user_singin' %}">Registrarse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Editar Perfil</a>
+                    <a class="nav-link" href="{% url 'user_update'   user.id %}">Editar Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Detalles de usuario</a>
+                    <a class="nav-link" href="{% url 'user_detail'  user.id  %}">Detalles de usuario</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar sesion</a>
+                    <a class="nav-link" href="{% url 'user_login' %}">Iniciar sesion</a>
                 </li>
              
             </ul>
