--- a/usuarios/templates/user_login.html
+++ b/usuarios/templates/user_login.html
@@ -1,5 +1,16 @@
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% load static %}
+
+
+
+
 <form method="POST">
     {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Iniciar Sesión</button>
+
+    <div style= "width:20%; margin :auto;">
+
+    {% bootstrap_form form %}
+  <button type="submit" class="btn btn-success">Crear Cuenta</button>
+  </div>
 </form>
