--- a/usuarios/templates/user_detail.html
+++ b/usuarios/templates/user_detail.html
@@ -16,7 +16,7 @@
   
   </ul>
 </div>
-{% endblock content %}>
+{% endblock content %}
 
 <img height="128" src="{{ object.avatar_set.first.image.url }}" />
 
