--- a/blog/templates/blog/blog_edit.html
+++ b/blog/templates/blog/blog_edit.html
@@ -3,7 +3,7 @@
 {% block title %}Nuevo Blog{% endblock %}
 {% block body %}
     <div class="container">
-        <h1>Nuevo Blog</h1>
+        <h1>Editar Blog</h1>
     </div>
     <form method="POST">
         <table>
