--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -4,7 +4,9 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 ">
-            <h2>Blog</h2>
+            <h2>Pulsa y Crea</h2>
+
+            <a href="{% url 'blogcrear' %}" class="btn btn-info" role="button">Crear</a>
 
         </div>
 
@@ -26,7 +28,6 @@
                         <tr>
                             <td>{{ b.user }}</td>
                             <td>{{ b.theme }}</td>
-                            <td><a href="blog_new">Crear</a></td>
                             <td><a href="blog_detail/{{ b.id }}">Detalle</a></td>
                             <td><a href="blog_edit/{{ b.id }}">Editar</a></td>
                             <td><a href="blog_delete/{{ b.id }}">Eliminar</a></td>
