Agrego loout y agrego funcionalidades a  html base

--- a/usuarios/templates/agregarAvatar.html
+++ b/usuarios/templates/agregarAvatar.html
@@ -20,6 +20,8 @@
     {{miFormulario.as_p}}
 </div>
     <button type="submit" class="btn btn-success">Actualizar Avatar</button>
+    <a class="btn btn-secondary" href="{% url 'bloginicio' %}" role="button">Cancelar</a>
+    
 
 </form>
 
