--- a/usuarios/templates/user_create_count.html
+++ b/usuarios/templates/user_create_count.html
@@ -4,7 +4,7 @@
 
 
 
-<a class="btn btn-secondary" href="{% url 'users' %}" role="button">Volver a Lista De Usuarios</a>
+<a class="btn btn-secondary" href="{% url 'bloginicio' %}" role="button">Regresar</a>
 
 {% block content %}
 
