--- a/usuarios/templates/user_updete_count.html
+++ b/usuarios/templates/user_updete_count.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<a class="btn btn-secondary" href="{% url 'users' %}" role="button">Volver a Lista De Usuarios</a>
+<a class="btn btn-secondary" href="{% url 'bloginicio' %}" role="button">Regresar</a>
 
 <form method="post">
     {% csrf_token %}
