--- a/usuarios/templates/user_login.html
+++ b/usuarios/templates/user_login.html
@@ -11,6 +11,6 @@
     <div style= "width:20%; margin :auto;">
 
     {% bootstrap_form form %}
-  <button type="submit" class="btn btn-success">Crear Cuenta</button>
+  <button type="submit" class="btn btn-success">Iniciar Sesion</button>
   </div>
 </form>
