se modifica blog para que no se vea si no esta logueado entre otras cosas

--- a/blog/templates/blog/create_form.html
+++ b/blog/templates/blog/create_form.html
@@ -17,6 +17,7 @@
 
 
         {% bootstrap_button "Guardar" button_type="submit" button_class="btn-success" %}
+        <a href="{% url 'bloginicio' %}" class="btn btn-info" role="button">Regresar</a>
 
 
 
