--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -4,10 +4,9 @@
 </head>
 {% block body %}
     <h1>Detalle Blog</h1>
-    <div>Usuario: {{ blog.user }}</div>
-    <div>Creación: {{ blog.date }}</div>
-    <div>Tema: {{ blog.theme }}</div>
-    <div>Texto: {{ blog.text_area }}</div>
+    <div>Creación: {{ object.date }}</div>
+    <div>Tema: {{ object.theme }}</div>
+    <div>Texto: {{ object.text_area }}</div>
     <a href="{% url 'bloginicio' %}" class="btn btn-info" role="button">Regresar</a>
 {% endblock body %}
 </html>
