--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,42 +1,74 @@
+{% extends "base.html" %}
 {% load bootstrap5 %}
 {% bootstrap_css %}
+{% load static %}
+{% block title %} Información{% endblock %}
+{% if object_list %}
 
-
-{% if blog_list  %}
-
-
-{% for blog in blog_list  %}
-
-<br>
-    <li>
-
-
-    {% block content %}
-
-<div class="container text-center">
-        <a href="{% url 'blogdetalle' blog.id %}"><button type="button" class="btn btn-info">Detalles de: {{blog.titulo}}</button></a>
+    {% block body %}
+        {% for blog in object_list %}
 
 
 
-        {% if user.is_authenticated %}
 
-          <a href="{% url 'blog_delete' blog.id %}"><button type="button" class="btn btn-danger">Borrar</button></a>
+            {% block content %}
 
-          <a href="{% url 'blog_update' blog.id %}"><button type="button" class="btn btn-primary">Actualizar</button></a>
+                <div class="container text-center">
 
-</div>
-        {% endif %}
+                    {% if user.is_authenticated %}
 
-    {% endblock %}
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6 col-lg-8 col-xl-8 "><h2>Creados</h2>
+                                <div class="container">
+                                    <table class="table table-striped ">
+                                        <thead>
+                                        <tr>
+                                            <th>Tema</th>
+                                            <th>Creacion</th>
+                                            <th>Acciones</th>
 
-    </li>
-    {% endfor %}
-    <br>
-    <a href="{% url 'blogcrear'%}"><button type="button" class="btn btn-primary">Agregar blog</button></a>
-    <br>
-    <br>
-  {% else %}
-  <h1> No hay blogs</h1>
-  {% endif %}
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>{{ blog.theme }}</td>
+                                            <td>{{ blog.date }}</td>
+                                            <td><a href="{% url 'blogcrear' %}">
+                                                <button type="button" class="btn btn-primary">Agregar blog</button>
+                                            </a></td>
+                                            <td><a href="{% url 'blogdetalle' blog.id %}">
+                                                <button type="button" class="btn btn-info">Detalle</button>
+                                            </a></td>
+                                            <td><a href="{% url 'blog_update' blog.id %}">
+                                                <button type="button" class="btn btn-primary">Actualizar</button>
+                                            </a></td>
+                                            <td><a href="{% url 'blog_delete' blog.id %}">
+                                                <button type="button" class="btn btn-danger">Borrar</button>
+                                            </a></td>
+                                        </tr>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        </div>
+
+
+
+
+                    {% endif %}
+
+            {% endblock %}
+
+            </li>
+        {% endfor %}
+    {% endblock body %}
+{% else %}
+    <h1> No hay blogs</h1>
+{% endif %}
+
 
 
