--- a/usuarios/templates/list.html
+++ b/usuarios/templates/list.html
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 ">
             <h2>title </h2>
+            Espacio para botones??
 
         </div>
 
