--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,10 +3,13 @@
 {% block title %} Detalle{% endblock %}
 </head>
 {% block body %}
+    
     <h1>Detalle Blog</h1>
-    <div>Creación: {{ object.date }}</div>
+    <div>Creado por : {{ user.username}}</div>
+    <div>Fecha: {{ object.date }}</div>
     <div>Tema: {{ object.theme }}</div>
     <div>Texto: {{ object.text_area }}</div>
+    
     <a href="{% url 'bloginicio' %}" class="btn btn-info" role="button">Regresar</a>
 {% endblock body %}
 </html>
