--- a/usuarios/templates/list.html
+++ b/usuarios/templates/list.html
@@ -5,13 +5,13 @@
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 ">
             <h2>title </h2>
-            Espacio para botones??
+         
 
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-8 col-xl-8 ">
             <div class="table-responsive py-2">
-                <h1>Listado Usuarios</h1>
+                <h1>Creadores de contenido</h1>
                 <table class="table table-striped">
                     <thead>
                     <tr>
