--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -5,7 +5,7 @@
 {% block body %}
     
     <h1>Detalle Blog</h1>
-    <div>Creado por : {{ user.username}}</div>
+    <div>Creado por :{{object.autor}}</div>
     <div>Fecha: {{ object.date }}</div>
     <div>Tema: {{ object.theme }}</div>
     <div>Texto: {{ object.text_area }}</div>
